force-app/main/default/objects/Translation_Mapping__mdt/Translation_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>The mapping of the field to be translated and the translation field used in the translation map.</description>
    <label>Translation Mapping</label>
    <pluralLabel>Translation Mappings</pluralLabel>
</CustomObject>