force-app/main/default/objects/Translation_Mapping__mdt/fields/Formula_Config__c.field-meta.xml
<CustomField>
    <fullName>Formula_Config__c</fullName>
    <label>Formula Config</label>
    <referenceTo>Formula_Config__mdt</referenceTo>
    <relationshipLabel>Translation Mappings</relationshipLabel>
    <relationshipName>Translation_Mappings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>