force-app/main/default/objects/Translation_Mapping__mdt/fields/Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Field__c</fullName>
    <description>The source field to be translated. Eg: reduivy__Description__c</description>
    <label>Source Field</label>
    <length>60</length>
    <type>Text</type>
</CustomField>