force-app/main/default/objects/Translation_Mapping__mdt/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <description>The source object to be translated. Eg: reduivy__Study_Unit__c</description>
    <label>Source Object</label>
    <length>60</length>
    <type>Text</type>
</CustomField>