force-app/main/default/objects/Translation_Mapping__mdt/fields/Translation_Field__c.field-meta.xml
<CustomField>
    <fullName>Translation_Field__c</fullName>
    <description>The translation field used in the translation map for this field. Eg: reduivy__Translation_Map__r.reduivy__Translation_1__c</description>
    <label>Translation Field</label>
    <length>150</length>
    <type>Text</type>
</CustomField>