force-app/main/default/objects/Translation_Mapping__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>Source_Object__c</columns>
    <columns>Source_Field__c</columns>
    <columns>Translation_Field__c</columns>
    <columns>Formula_Config__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>